Move runtime target to Java 21