@@ -27,6 +27,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLDecoder;
@@ -157,7 +158,7 @@ public class PaymentGatewayBluePayAUTHNETEMU implements PaymentGateway {
             }
 
             // open secure connection
-            URL url = new URL(ENDPOINTADDRESS);
+            URL url = URI.create(ENDPOINTADDRESS).toURL();
 
             URLConnection connection = url.openConnection();
             connection.setDoOutput(true);
@@ -200,7 +201,7 @@ public class PaymentGatewayBluePayAUTHNETEMU implements PaymentGateway {
                 payinfo.paymentError(anp.getResult(), "");
             }
 
-        } catch (UnsupportedEncodingException | MalformedURLException eUE) {
+        } catch (UnsupportedEncodingException | IllegalArgumentException | MalformedURLException eUE) {
             payinfo.paymentError(AppLocal.getIntString("message.paymentexceptionservice"), eUE.getMessage());
         } catch (IOException e) {
             payinfo.paymentError(AppLocal.getIntString("message.paymenterror"), e.getMessage());
