@@ -27,6 +27,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLDecoder;
@@ -176,7 +177,7 @@ public class PaymentGatewayCaixa implements PaymentGateway {
         sb.append("entrada=").append(URLEncoder.encode(xml, "UTF-8"));
 
         // open secure connection
-        URL url = new URL(ENDPOINTADDRESS);
+        URL url = URI.create(ENDPOINTADDRESS).toURL();
         URLConnection connection = url.openConnection();
         connection.setDoOutput(true);
         connection.setUseCaches(false);
@@ -274,7 +275,7 @@ public class PaymentGatewayCaixa implements PaymentGateway {
                 payinfo.paymentError(lpp.getResult(), "");
             }
         } 
-        } catch (UnsupportedEncodingException | MalformedURLException eUE) {
+        } catch (UnsupportedEncodingException | IllegalArgumentException | MalformedURLException eUE) {
             payinfo.paymentError(AppLocal.getIntString("message.paymentexceptionservice"), eUE.getMessage());
         } catch(IOException e){
             payinfo.paymentError(AppLocal.getIntString("message.paymenterror"), e.getMessage());
